# pinholeTest

./: .gitignore  BenchSample  CapSettings.cap  Cargo.toml  LICENSE  README.md  \  _typos.toml  collect_bench.fish  image_quality.fish  scratchpad  test  todo.md
benches/: app_bench.rs  simple_bench.rs
factorization/: Cargo.toml
factorization/benches/: simple_bench.rs
factorization/src/: lib.rs  utils.rs
saves/Curated/1ViewPoint/: save.ro
saves/Curated/2KernelViewPoint/: save.ro
saves/Curated/2ViewPoint/: save.ro
saves/Curated/KernelViewPoint/: save.ro
saves/matrix_capture/sep/: 2000.ro  Default.ro  Kernel.ro
saves/matrix_capture/stereo/: Default.ro
saves/scene_capture/SystemTime { tv_sec: 1754054375, tv_nsec: 854325963 }/: save.ro
saves/scene_capture/SystemTime { tv_sec: 1754054379, tv_nsec: 163493150 }/: save.ro
saves/scene_capture/SystemTime { tv_sec: 1754054529, tv_nsec: 412891628 }/: save.ro
saves/scene_capture/Tucan/: save.ro
saves/scene_capture/test/: save.ro
shaders/: diagonal.wgsl  element_wise.wgsl  fragment.glsl  l_fragment.glsl  l_vertex.glsl  matrix_mul.wgsl  matrix_mul_transpose.wgsl  projection.wgsl  reverse_projection.wgsl  simple.wgsl  vertex.glsl
src/: als.rs  app.rs  camera.rs  compute_pass.rs  config.rs  egui_tools.rs  file_picker.rs  gif.rs  headless.rs  lib.rs  light_factor.rs  main.rs  matrix.rs  raytracer.rs  save.rs  scene.rs  shader.rs  shape.rs  stereoscope.rs  texture.rs  utils.rs  vertex.rs
