[package]
name = "light_field_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = {version = "1.22.0", features = ["derive"]}
cgmath = { version = "0.18.0", features = ["swizzle", "serde"] }
clap = { version = "4.5.41", features = ["derive"] }
crevice = { version = "0.18.0", features = ["cgmath"] }
criterion = "0.6.0"
egui = "0.31.1"
egui-notify = "0.19.0"
egui-wgpu = "0.31.1"
egui-winit = "0.31"
egui_file = "0.22.1"
faer = {version = "0.22.6", features =["perf-warn", "rayon", "std", "serde"]}
futures-intrusive = "0.5.0"
image = {version = "0.25.5", features= ["jpeg", "png", "rayon", "serde"]}
indicatif = "0.17.11"
notify = "8.0.0"
plotters = "0.3.7"
pollster = "0.4.0"
rayon = "1.10.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["std", "derive"] }
walkdir = "2.5.0"
wgpu = "24.0.1"
winit = "0.30.9"



[[bench]]
name = "simple_bench"
harness = false

[profile.release]
debug = true
strip = false


[profile.dev.package.faer]
opt-level = 3

